api-staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: ingress-example-app
  namespace: default
  annotations:
      cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
    - hosts:
      - api-staging.gingersociety.org
      secretName: letsencrypt-nginx
  rules:
    - host: api-staging.gingersociety.org
      http:
        paths:
          - path: /example
            pathType: Prefix
            backend:
                service:
                  name: example-service 
                  port:
                    number: 80
          - path: /iam
            pathType: Prefix
            backend:
                service:
                  name: iam-service-api-service
                  port:
                    number: 80
          - path: /metadata
            pathType: Prefix
            backend:
                service:
                  name: metadata-service-api-service
                  port:
                    number: 80
  ingressClassName: nginx
